--- a/public/assets/less/wedding.less
+++ b/public/assets/less/wedding.less
@@ -1,1 +1,73 @@
-wedding.less
+body {
+
+  background-color: grey;
+  color: white;
+
+  #info-section,
+  #rsvp-section,
+  #map-section {
+
+    width: 100%;
+    color: grey;
+    display: block;
+    position: relative;
+
+  }
+
+
+  #info-section {
+    .intro {
+
+      width: 750px;
+      height: auto;
+      background-color: transparent;
+      margin: 0 auto;
+      color: white;
+      text-align: center;
+
+      .intro-lead {
+        color: white;
+        font-size: 50px;
+      }
+
+      .intro-message {
+        color: white;
+        font-size: 18px;
+      }
+
+    }
+  }
+
+    #rsvp-section {
+
+    .form-container {
+      width: 750px;
+      height: auto;
+      background-color: transparent;
+      margin: 0 auto;
+      color: white;
+      text-align: center;
+    }
+
+  }
+
+  #map-section {
+
+    .map-container {
+      width: 750px;
+      height: auto;
+      background-color: transparent;
+      margin: 0 auto;
+      color: white;
+      text-align: center;
+    }
+
+  }
+
+
+
+
+
+
+
+}
